aligned items and updated

--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+<head><script type="text/javascript" src="/___vscode_livepreview_injected_script"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Portfolio</title>
+    <title>Personal website</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/3367917730.js" crossorigin="anonymous"></script>
-    
-   
-
 </head>
 
 <body>
@@ -17,7 +15,6 @@
         <div class="container">
             <nav>
                 <a href="#header"><img src="Images/logo.png" class="logo"></a>
-
                 <ul id="sidemenu">
                     <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
@@ -33,18 +30,17 @@
             </div>
         </div>
     </div>
-
-    <!-- about -->
-
+    <!-- ----------------------------------About--------------------------------------- -->
     <div id="about">
         <div class="container">
-            <h1 class="sub-title">About Me</h1>
+            <h1 class="sub-title about">About Me</h1>
             <div class="row">
                 <div class="about-col-1">
-                    <img src="Images/computer.png">
+                    <img src="images/work.avif">
                 </div>
                 <div class="about-col-2">
-                    <p>Java Developer and QA Engineer with expertise in manual and automation testing. Skilled in
+                    <p><span>Java Developer</span> and <span>QA Engineer</span> with expertise in manual and automation
+                        testing. Skilled in
                         developing robust solutions using Java, Collection Framework, JDBC, Hibernate, Selenium, SQL,
                         and front-end technologies like HTML, CSS, and JavaScript. Certified in Java Full Stack
                         Development and Software Testing. Proficient in Agile, SDLC, defect tracking, and test case
@@ -97,7 +93,7 @@
                                 methods to first generate potential bounding boxes during a picture then run a
                                 classifier on these proposed boxes.
                             </li>
-                            <li><span>Intrenship pProject</span><br>Apartment Visitor Management System <br>
+                            <li><span>Intrenship Project</span><br>Apartment Visitor Management System <br>
                                 Apartment Visitor Management system is a web-based technology that will revolutionize
                                 the way your society manages visitors. Visitor Management system is more important to
                                 security guards or security society.
@@ -140,15 +136,14 @@
             </div>
         </div>
     </div>
-
-    <!-- -------------------Mywork------------------------ -->
-
+    <br><br><br><br>
+    <!-- ----------------------------------Work--------------------------------------- -->
     <div id="Portfolio">
         <div class="container">
             <h1 class="sub-title">My Work</h1>
             <div class="work-list">
                 <div class="work">
-                    <img src="Images/linkedinlogo.webp">
+                    <img src="Images/socialmedia.avif">
                     <div class="layer">
                         <h3>Social Media</h3>
                         <p>LinkedIn</p>
@@ -157,7 +152,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="Images/github.jpeg">
+                    <img src="Images/git.avif">
                     <div class="layer">
                         <h3>Projects</h3>
                         <p>Github</p>
@@ -166,44 +161,43 @@
                     </div>
                 </div>
             </div>
-            <!-- <a href="#" class="btn">See More</a> -->
         </div>
     </div>
-    <br><br>
-
-    <!-- -------------------contact------------------------ -->
+    <br><br><br><br>
+    <!-- ----------------------------------Contact--------------------------------------- -->
 
     <div id="contact">
         <div class="container">
             <div class="row">
                 <div class="contact-left">
-                    <h1 class="subtitle">Contact Me</h1>
-                    <a href="Akarsh.pdf" target="_blank" class="btn btn2">Download CV</a>
+                    <h1 class="sub-title">Contact Me</h1>
+                    <p><i class="fa-solid fa-paper-plane"></i> mashalakarsh@gmail.com</p>
+                    <p><i class="fa-solid fa-phone"></i> +91-9742671446</p>
+                    <div class="social-icons">
+                        <a href="https://www.instagram.com/akarsh_mashal/" target="_blank"><i
+                                class="fa-brands fa-instagram"></i></a>
+                        <a href="https://www.facebook.com/akarsh.mashal" target="_blank"><i
+                                class="fa-brands fa-facebook"></i></a>
+                    </div>
+                    <a href="Images/Akarsh.pdf" target="_blank" class="btn btn2">Download CV</a>
                 </div>
                 <div class="contact-right">
-                    <form name='submit-to-google-sheet'>
+                    <form name="submit-to-google-sheet">
                         <input type="text" name="Name" placeholder="Your Name" required>
                         <input type="email" name="Email" placeholder="Your E-mail" required>
                         <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
                         <button type="submit" class="btn btn2">Submit</button>
                     </form>
-
-                    <span id="msg"></span>
-
+                    
                 </div>
             </div>
         </div>
         <div class="copyright">
-            Copyright &copy | All Rights Reversed 2025
+            Copyright &copy | All Rights Reversed 2024
         </div>
     </div>
-</div>
-<script>
-
-</script>
-     <script src="opentab.js"></script>
-     <script src="sidemenu.js"></script>
-     <script src="googlesheet.jss"></script>
+    <script src="tab.js"></script>
+    <script src="sidemenu.js"></script>
 </body>
 
 </html>
