--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <h1 class="sub-title about">About Me</h1>
             <div class="row">
                 <div class="about-col-1">
-                    <img src="Images/work.avif" alt="">
+                    <img src="Images/About.avif" alt="">
                 </div>
                 <div class="about-col-2">
                     <p><span>Java Developer</span> and <span>QA Engineer</span> with expertise in manual and automation
